# wololo

./: .gitignore  LICENSE  Makefile  README.md  compose.dev.yml  compose.local.yml  compose.yml  deno.json  package-lock.json  package.json  tsconfig.json
.devcontainer/: devcontainer.json
app/: routes.tsx  server.ts
app/islands/: form.tsx
client/: .env  Dockerfile  Dockerfile.dev  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  main.ts  main.tsx
client/src/components/form/: convert-file-form.tsx  download-ffmpeg-button.tsx
client/src/components/header/: banner.tsx  description.tsx  logo.tsx
client/src/css/: reset-css.css  style.css
client/src/helpers/: api.ts  main.ts  send-convert-file-request.ts  supported-formats.ts
client/src/hooks/: use-ffmpeg.tsx
server/: .env  Cargo.toml  Dockerfile  Dockerfile.dev
server/src/: errors.rs  formats.rs  main.rs  routes.rs  tmp_file.rs  utils.rs
src/: main.ts  routes.tsx
src/islands/: form.tsx
src/middlewares/: jsx.tsx
