[package]
name = "wololo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["multipart", "json"] }
dotenvy = "0.15.7"
http = "1.1.0"
nanoid = "0.4.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"
tokio = { version= "1.39.2", features = ["full"] }
tokio-util = "0.7.11"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
